# TradingView-Report-Screenshot-Automator

./: .gitignore  README.md  config.txt  pyproject.toml
screenshot_automator/: main.py
tradingview_report_screenshot_automator/: main.py
